# DreamBench

./: .gitignore  Dreamer3.MD  README.md  SPEC.MD  pyproject.toml  realsetup.MD
.claude/: settings.local.json
docs/: training_dreamerv3.md
dreambench/: __init__.py  runner.py
dreambench/adapters/: base.py  delta_iris.py  diamond.py  dreamerv3.py  iris.py  mock.py
dreambench/configs/: config.yaml
dreambench/configs/env/: atari.yaml  crafter.yaml  minigrid.yaml  mock.yaml
dreambench/configs/model/: delta_iris_crafter.yaml  diamond.yaml  diamond_breakout.yaml  dreamerv3.yaml  dreamerv3_breakout.yaml  dreamerv3_crafter.yaml  iris.yaml  iris_breakout.yaml  mock.yaml
dreambench/envs/: base.py  registry.py
dreambench/envs/atari/: scenarios.yaml  wrapper.py
dreambench/envs/crafter/: scenarios.yaml  wrapper.py
dreambench/envs/minigrid/: scenarios.yaml  wrapper.py
dreambench/envs/mock/: scenarios.yaml  wrapper.py
dreambench/metrics/: composite.py  per_probe.py  visualization.py
dreambench/probes/: base.py  entity_integrity.py  object_permanence.py  physics_consistency.py  registry.py  reward_fidelity.py  temporal_coherence.py
dreambench/probes/utils/: tracking.py
dreambench/templates/: report.html.j2
outputs/2026-04-09/16-06-04/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: debug_probe.py  generate_report.py  run_all_envs.sh  run_benchmark.py  smoke_test_envs.py  test_dreamerv3_adapter.py  train_dreamerv3.sh  validate_scenarios.py
tests/: test_base_classes.py  test_envs.py  test_metrics.py  test_probes.py  test_runner.py
(+44 files in other folders)
